<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.blablawild.SearchItineraryActivity">

    <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="19dp"
            android:text="@string/depart" />

    <EditText
        android:id="@+id/editTextSearchDeparture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:hint="@string/hintDepart"
        android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextSearchDeparture"
            android:layout_alignStart="@+id/editTextSearchDeparture"
            android:layout_below="@+id/editTextSearchDeparture"
            android:layout_marginTop="16dp"
            android:text="@string/Arrive" />

    <EditText
        android:id="@+id/editTextSearchDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:ems="10"
        android:hint="@string/hintArrivee"
        android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextSearchDestination"
            android:layout_alignStart="@+id/editTextSearchDestination"
            android:layout_below="@+id/editTextSearchDestination"
            android:layout_marginTop="15dp"
            android:text="@string/date" />

    <EditText
        android:id="@+id/editTextSearchDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:ems="10"
        android:hint="@string/hintDate"
        android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editTextSearchDate"
            android:layout_alignLeft="@+id/editTextSearchDate"
            android:layout_alignRight="@+id/editTextSearchDate"
            android:layout_alignStart="@+id/editTextSearchDate"
            android:layout_below="@+id/editTextSearchDate"
            android:layout_marginTop="33dp"
            android:text="@string/search_button" />

</RelativeLayout>
